--- a/website/index.html
+++ b/website/index.html
@@ -2,10 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/nod-cli.svg" />
+    <link rel="icon" type="image/svg+xml" href="/nod-cli/nod-cli.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="nod-cli - Backend scaffolding CLI for Node.js with best practices built-in" />
     <title>nod-cli - Backend Scaffolding CLI</title>
+    <!-- Single Page Apps for GitHub Pages redirect handler -->
+    <script type="text/javascript">
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
   </head>
   <body>
     <div id="root"></div>
